# memfoc

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  vercel.json
.github/ISSUE_TEMPLATE/: grant_application.yml
.github/workflows/: ci.yml
api/: index.py
demo/server/: agent_graph.py  assistants.py  grant_optimizer.py  main.py
demo/web/: index.html  package-lock.json  package.json  tailwind.config.js
demo/web/src/: App.tsx  index.css  main.tsx
demo/web/src/components/brand/: Logo.tsx  LogoMark.tsx  ProductBadges.tsx
demo/web/src/components/chat/: AssistantChat.tsx  GrantOptimizer.tsx
demo/web/src/components/grant/: DemoVideoCTA.tsx  GrantBlocks.tsx  JudgeTourBanner.tsx  PrototypeBanner.tsx  ReviewerWelcomeModal.tsx
demo/web/src/data/: docs.ts  navigation.ts
demo/web/src/hooks/: GrantPolishContext.tsx  useMemfocData.ts
demo/web/src/lib/: api.ts  domAudit.ts
demo/web/src/sections/: AgentSection.tsx  ArchitectureSection.tsx  BenchmarkSection.tsx  ConsoleSection.tsx  DemoSection.tsx  FundingGapSection.tsx  GrantSection.tsx  IntegrationSection.tsx  ManifestSection.tsx  OverviewSection.tsx  ProcessSection.tsx  UseCasesSection.tsx
docs/: ADOPTION.md  COST_MODEL.md  DEMO_VIDEO_SCRIPT.md  DIFFERENTIATION.md  GRANT.md  VERIFICATION.md
examples/: minimal_langgraph.py
scripts/: run_all_tests.ps1  smoke_test_api.py  start.ps1  vercel_build.sh
src/memfoc/: __init__.py  index.py  store.py  worker.py
src/memfoc/backend/: __init__.py  base.py
tests/: test_api_integration.py  test_assistants.py  test_store.py
(+9 files in other folders)
