[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memfoc"
version = "0.1.0"
description = "LangGraph BaseStore backed by Filecoin Onchain Cloud"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "MemFOC Team" }]
dependencies = [
  "langgraph>=0.4.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.3.0",
  "aiosqlite>=0.20.0",
  "httpx>=0.28.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
demo = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "websockets>=14.0",
]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/memfoc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.vercel]
entrypoint = "api.index:app"

[tool.vercel.scripts]
build = "sh scripts/vercel_build.sh"
